# padmet-rs

./: .copier-answers.yml  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml
.github/workflows/: lints.yaml  tests.yaml  website.yaml
src/: cli.rs  error.rs  io.rs  lib.rs  main.rs  node.rs  policy.rs  relation.rs  spec.rs
tests/: functional.rs  help.rs
website/: SUMMARY.md  example.md  install.md
